--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "webpack": "^5.73.0"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "0.4.0",
+    "css-loader": "0.28.11",
+    "style-loader": "0.21.0",
     "webpack-cli": "^4.10.0"
   }
 }
